--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,11 @@ a {
    text-decoration: none;
    color: #ffc069 !important;
 }
+.errorMessage {
+   text-align: center;
+   color: #ffc069;
+   padding: 0px 0 15px;
+}
 .leftSection,
 .rightSection {
    display: flex;
@@ -26,46 +31,136 @@ a {
    background: linear-gradient(-45deg, #06102e 0%, #182958 100%);
    color: #ffffff;
 }
-
-/* Login And signup form */
-.label {
-   fill: #ffffff;
-   color: #ffffff;
-   width: 22px;
-   margin-top: 20px;
-   position: relative;
-   left: 5px;
-   top: 30px;
-   letter-spacing: 1px;
-}
+/* Signup and login form */
 .label img {
    position: relative;
-   top: -5px;
+   top: -4px;
+   left: 5px;
 }
-.authInput {
-   background: transparent;
+.inputbox {
+   position: relative;
+   margin-top: 10px;
+}
+.inputbox input {
+   width: 100%;
+   padding: 5px 0;
+   color: #ffc069;
+   font-size: 14px;
+   letter-spacing: 1px;
+   margin-bottom: 30px;
    border: none;
    border-bottom: 1px solid #ffffff;
    outline: none;
-   width: 300px;
-   max-width: 500px;
-   color: #ffffff;
+   background: transparent;
+   padding-left: 10px;
 }
+.inputbox .label {
+   position: absolute;
+   top: 4px;
+   letter-spacing: 1px;
+   pointer-events: none;
+   transition: 300ms;
+}
+.inputbox label {
+   margin-left: 15px;
+}
+.inputbox input:focus + .label,
+.inputbox input:valid + .label {
+   position: absolute;
+   top: -20px;
+   font-size: 14px;
+   opacity: 0.7;
+   letter-spacing: 1px;
+}
+
 form h3 {
    letter-spacing: 2px;
    font-size: 1.5rem;
+   margin-bottom: 60px;
 }
 form a,
 span {
    letter-spacing: 1px;
 }
+.formSwitch {
+   color: #ffc069;
+   cursor: pointer;
+   position: relative;
+}
+.formSwitch::after {
+   content: "";
+   position: absolute;
+   bottom: 0;
+   top: 23px;
+   left: 0;
+   right: 0;
+   height: 0.15rem;
+   background-color: #ffc069;
+   transform: scaleX(0);
+   transition: transform 100ms ease-out;
+   transform-origin: left;
+}
+.formSwitch:hover::after,
+.formSwitch:focus::after {
+   transform: scaleX(1);
+}
 /* login and signup button */
 .authBtn {
-   margin-top: 30px;
+   margin-top: 10px;
    padding: 10px 20px;
    width: 300px;
    border-radius: 100px;
    color: #ffffff;
-   background: linear-gradient(90deg, #ff7f77 0%, #ffc069 100%);
+   /* background: linear-gradient(90deg, #ff7f77 0%, #ffc069 100%); */
+   background: linear-gradient(90deg, #da6b63 0%, #d39e54 100%);
+   background-color: #ffc069;
    border: none;
+   transition: all 300ms ease-in-out;
+   box-shadow: 0 0 20px #b87f30;
 }
+
+.authBtn:hover {
+   color: #000;
+   box-shadow: 0 0 40px #b87f30;
+   transition: all 300ms ease-in-out;
+}
+
+@media (max-width: 576px) {
+   .leftSection {
+      height: 48vh;
+   }
+   .leftSection img {
+      max-width: 350px;
+      margin: 0 auto;
+   }
+   .rightSection {
+      min-height: 52vh;
+      height: 400px;
+   }
+   form h3 {
+      margin-bottom: 25px;
+   }
+}
+@media (max-wdth: 300px) {
+   body {
+      overflow: hidden;
+   }
+   .leftSection img {
+      max-width: 280px;
+      margin: 0 auto;
+   }
+   .leftSection {
+      height: 50vh;
+   }
+}
+
+/* ::placeholder {
+   color: #ffffff;
+   opacity: 1;
+}
+:-ms-input-placeholder {
+   color: #ffffff;
+}
+::-ms-input-placeholder {
+   color: #ffffff;
+} */
